
<!-- RECURSOS DE LOS COMPONENTES-->

<!-- DECLARAMOS LOS BOTONES-->

<resources>
    <string name="app_name">CalculadoraGrafica</string>

    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="resta">-</string>
    <string name="suma">+</string>
    <string name="multiplicacion">X</string>
    <string name="division">/</string>
    <string name="igual">=</string>
    <string name="memomas">M+</string>
    <string name="memonmenos">M-</string>
    <string name="c">C</string>

</resources>
